--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://aristides-nogueira.github.io/mail",
-  "name": "mail",
+  "homepage": "https://aristides-nogueira.github.io/vagas",
+  "name": "vagas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
